updated ignore list

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /DocumentToPdf.Api/obj/Debug/
 /DocumentToPdf.Core/bin/
 /DocumentToPdf.Core/obj/
+/DocumentToPdf.Api/obj/
+/DocumentToPdf.Core/obj/
