--- a/DocumentToPdf.Api/DocumentToPdf.Api.csproj
+++ b/DocumentToPdf.Api/DocumentToPdf.Api.csproj
@@ -7,12 +7,13 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="DocumentToPdf.Core" Version="1.0.0" />
 		<PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.11" />
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\DocumentToPdf.Core\DocumentToPdf.Core.csproj" />
+		
 	</ItemGroup>
 
 </Project>
